--- a/git.html
+++ b/git.html
@@ -10,6 +10,22 @@
         <h1>Shopping Cart</h1>
         </center>
         <hr>
-        
+        <center>
+            <h1>Shopping Cart</h1>
+            </center>
+            <hr>
+            <form>
+                <center>
+            <table >
+            <tr>
+            <th>Product</th>
+            <th>Description</th>
+            <th>Price</th>
+            <th>Quantity</th>
+            <th>Subtotal</th>
+            <th>Cancel</th>
+            </tr>
+            <tr>
+            
 </body>
 </html>
